k8s.yaml
---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: qa
  name: shiqi-deploy
  labels:
    app: shiqi-deploy
    release: shiqi-deploy
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  selector:
    matchLabels:
      app: shiqi-deploy
      release: shiqi-deploy
  template:
    metadata:
      labels:
        app: shiqi-deploy
        release: shiqi-deploy
    spec:
      imagePullSecrets:
        - name: ali-docker-auth
      containers:
        - name: shiqi-deploy
          image: registry.cn-hangzhou.aliyuncs.com/ranmo/shiqi-deploy:${BUILD_NUMBER}
          command:
            - sh
            - -c
            - (sh /root/deploy/run.sh)

          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          #          livenessProbe:
          #            httpGet:
          #              path: /healthz
          #              port: http
          #            initialDelaySeconds: 5

          resources:
            limits:
              cpu: 2
              memory: 2048Mi
            requests:
              cpu: 0.1
              memory: 1024Mi

---
# Source: service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: qa
  name: shiqi-deploy
  labels:
    app: shiqi-deploy
    release: shiqi-deploy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: shiqi-deploy
    release: shiqi-deploy


---
# Source:ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: qa
  name: shiqi-deploy
  labels:
    app: shiqi-deploy
    release: shiqi-deploy

spec:
  rules:
    - host: shiqi-deploy.qa.cn
      http:
        paths:
          - path: /
            backend:
              serviceName: shiqi-deploy
              servicePort: http
